# mdinterface

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
api/database/: index.html
api/io/: index.html
api/polymer/: index.html
api/simcell/: index.html
api/specie/: index.html
docs/: index.md  installation.md  quickstart.md
docs/api/: database.md  externals.md  io.md  polymer.md  simcell.md  specie.md
docs/guide/: database.md  logging.md  polymer.md  simcell.md  specie.md
examples/: builder_electrode_interface.py  builder_multilayer.py  builder_solvent_box.py  electrode_interface.py  make_solvent_box.py  multilayer.py  multisolvent_box.py  sandwich_from_traj.py  solvent_box.py
examples/box_builder/: builder_electrode_interface.py  builder_multilayer.py  builder_multisolvent_box.py  builder_sandwich_from_traj.py  builder_solvent_box.py
examples/box_builder/data/: water_frame.dump
examples/data/: membrane.data.lammps  membrane.production.dump
examples/legacy/: make_box.py  make_specie_ligpargen_resp.py
examples/polymer/: polymer_piperion.py
examples/polymer/data/mon1/: monomer_1.lammps.lmp
examples/polymer/data/mon2/: monomer_2.lammps.lmp
guide/database/: index.html
guide/logging/: index.html
guide/polymer/: index.html
guide/simcell/: index.html
guide/specie/: index.html
installation/: index.html
mdinterface/: __init__.py  config.ini  config.py  logging_config.py  simulationbox.py
mdinterface/core/: __init__.py  polymer.py  specie.py  topology.py
mdinterface/database/: __init__.py  graphene.py  ions.py  metals.py  molecules.py  nobles.py
mdinterface/examples/: data.lammps  example.py  make_POSCAR.py  make_box.py  make_polymer.py  make_solvent_box.py  make_specie_ligpargen_resp.py
mdinterface/examples/data/: nafion_n1.data.lammps  nafion_n1_dep.data.lammps
mdinterface/io/: __init__.py  gromacswriter.py  lammpswriter.py  packmol.py  read.py
mdinterface/read/: cp2ktraj.py  lammpstraj.py  read.py  trajectory.py  xyztraj.py
mdinterface/utils/: __init__.py  auxiliary.py  database.py  draw.py  graphs.py  logger.py  map.py  poisson.py  rings.py  units.py
pyinterface/: __init__.py  box_builder.py  simulationbox.py
pyinterface/core/: specie.py  topology.py
pyinterface/examples/: data.lammps  example.py
pyinterface/io/: __init__.py  lammpswriter.py  read.py
pyinterface/utils/: auxiliary.py  database.py  map.py
quickstart/: index.html
search/: search_index.json
test_env/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_auxiliary.py  test_builder.py  test_database.py  test_simulationbox.py  test_solvent.py  test_specie.py  test_topology.py
