[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[metadata]
name = mdinterface
description = mdinterface: A package for building interface systems in Molecular Dynamics simulations.
dynamic = ['version']
readme = 'README.md'
maintainers = [{ name = 'Fabrice Roncoroni', email = 'fabrice.roncoroni@gmail.com' }]
url = https://gitlab.com/roncofaber/mdinterface
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Scientific/Engineering

[tool.setuptools.dynamic]
version = {attr = 'mdinterface.__version__'}

[options]
python_requires = >=3.6
packages = find:
install_requires =
    mdanalysis
    ase
    numpy