[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdinterface"
version = "1.3.0"
description = "Build Interface Systems for Molecular Dynamics Simulations"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Fabrice Roncoroni", email = "fabrice.roncoroni@gmail.com"}
]
maintainers = [
    {name = "Fabrice Roncoroni", email = "fabrice.roncoroni@gmail.com"}
]
keywords = ["molecular dynamics", "simulation", "materials science", "chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "mdanalysis>=2.0.0",
    "ase>=3.22.0",
    "numpy>=1.21.0",
    "networkx>=2.8.0",
    "platformdirs>=2.5.0",
    "configparser>=5.0.0",
]

[project.optional-dependencies]
volume = ["libarvo"]
resp = ["pyscf", "pymbxas"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "isort>=5.10.0",
    "pre-commit>=2.20.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "nbsphinx>=0.8.0",
    "jupyter>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "nbsphinx>=0.8.0",
    "jupyter>=1.0.0",
]
all = [
    "mdinterface[volume,resp,dev,test,docs]"
]

[project.urls]
Homepage = "https://gitlab.com/roncofaber/mdinterface"
Documentation = "https://gitlab.com/roncofaber/mdinterface"
Repository = "https://gitlab.com/roncofaber/mdinterface.git"
"Bug Tracker" = "https://gitlab.com/roncofaber/mdinterface/-/issues"

[tool.setuptools.packages.find]
include = ["mdinterface*"]

[tool.setuptools.package-data]
mdinterface = ["database/data/*", "examples/*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mdinterface"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ase.*",
    "MDAnalysis.*",
    "networkx.*",
    "packmol.*",
    "pyscf.*",
    "pymbxas.*",
    "libarvo.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["mdinterface"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]