[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdinterface"
description = "Build Interface Systems for Molecular Dynamics Simulations"
authors = [
    {name = "Fabrice Roncoroni", email = "fabrice.roncoroni@gmail.com"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["molecular dynamics", "simulation", "interface", "chemistry", "materials science"]
dynamic = ["version"]

dependencies = [
    "mdanalysis>=2.0.0",
    "ase>=3.22.0",
    "numpy>=1.20.0",
    "networkx>=2.5",
    "platformdirs>=2.0.0",
    "configparser>=5.0.0",
    "libarvo",
]

[project.urls]
Homepage = "https://gitlab.com/roncofaber/mdinterface"
Repository = "https://gitlab.com/roncofaber/mdinterface.git"
Documentation = "https://gitlab.com/roncofaber/mdinterface"
"Bug Tracker" = "https://gitlab.com/roncofaber/mdinterface/-/issues"

[project.optional-dependencies]
resp = [
    "pyscf>=2.0.0",
    "pymbxas",
]
aimd = [
    "fairchem-core",
]
all = [
    "pyscf>=2.0.0",
    "pymbxas",
    "fairchem-core",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "mdinterface.__version__"}