[metadata]
name = mdinterface
description = mdinterface: A package for building interface systems in Molecular Dynamics simulations.
version = attr:mdinterface.__version__
readme = 'README.md'
maintainers = [{ name = 'Fabrice Roncoroni', email = 'fabrice.roncoroni@gmail.com' }]
url = https://gitlab.com/roncofaber/mdinterface
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
packages = find:
install_requires = file:requirements.txt

[options.extras_require]
volume =
    libarvo

resp =
    pyscf

all =
    .[volume]
    .[resp]
